# snake-duel

./: .gitignore  AGENTS.md  BUGFIX_SCORE_SUBMISSION.md  HOW_TO_RUN.md  README.md  cleanup.sh  docker-compose.yml  openapi.yaml  package-lock.json  package.json  render.yaml
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  database.py  main.py  pyproject.toml  routes_auth.py  routes_leaderboard.py  routes_players.py  schemas.py  seed_db.py  test_main.py
backend/app/: __init__.py  database.py  database_old.py  routes_auth.py  routes_leaderboard.py  routes_players.py  schemas.py
backend/migrations/: env.py
backend/migrations/versions/: 6c3c3c05ad3b_initial_create_users_leaderboard_.py
backend/tests/: test_integration_sqlite.py  test_leaderboard_and_players.py  test_models.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
frontend/src/components/Auth/: AuthModal.tsx  LoginForm.tsx
frontend/src/components/Game/: ScoreDisplay.tsx  (+1 more)
frontend/src/lib/: api.ts  game-logic.test.ts
frontend/src/pages/: Index.tsx
frontend/test/: components.test.tsx  game-logic.test.ts
src/: App.css  index.css
src/components/Auth/: SignupForm.tsx
src/components/Game/: GameBoard.tsx  GameControls.tsx
src/components/Layout/: Header.tsx
src/components/Leaderboard/: Leaderboard.tsx
src/components/ui/: card.tsx
src/contexts/: AuthContext.tsx
src/lib/: game-logic.test.ts  game-logic.ts
src/pages/: Index.tsx
tests_integration/: test_integration_sqlite.py
(+3 files in other folders)
