[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"fastapi>=0.104.0",
	"uvicorn>=0.24.0",
	"pydantic>=2.0.0",
	"python-multipart>=0.0.6",
	"sqlalchemy>=2.0.44",
	"psycopg2-binary>=2.9.11",
	"alembic>=1.17.2",
]

[project.optional-dependencies]
dev = [
	"pytest>=7.4.0",
	"pytest-asyncio>=0.21.0",
	"httpx>=0.25.0",
]
